--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t reverseproxy .
-  - docker tag reverseproxy mohamedsorour1998 / reverseproxy:v1
+  - docker tag reverseproxy mohamedsorour1998/reverseproxy:v1
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
